[package]
name = "cargo-wix"
description = "Build Windows installers using the WiX Toolset"
version = "0.3.1"
authors = ["Christopher Field <cfield2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/volks73/cargo-wix"
documentation = "https://volks73.github.io/cargo-wix"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "installer", "wix-toolset", "wix"]
homepage = "https://github.com/volks73/cargo-wix"
readme = "README.md"
edition = "2018"
exclude = ["/.github"]

[[bin]]
name = "cargo-wix"

[lib]
name = "wix"

[dependencies]
chrono = "0.4"
encoding_rs_io = "0.1"
env_logger = "0.8"
log = "0.4"
mustache = "0.9"
regex = "1"
rustc-cfg = "0.4"
semver = "0.11"
sxd-document = "0.3"
sxd-xpath = "0.4"
termcolor = "1"
# TODO: Remove toml crate dependency. See [Issue #111](https://github.com/volks73/cargo-wix/issues/111)
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
cargo_metadata = "0.12"
serde_json = "1.0"

[dev-dependencies]
assert_fs = "1.0"
lazy_static = "1"
maplit = "1"
predicates = "1.0"
serial_test = "0.5"

[dependencies.clap]
version = "2"
default-features = false
features = ["suggestions", "vec_map"]

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/cargo-wix" }
is-it-maintained-open-issues = { repository = "volks73/cargo-wix" }
