[package]
name = "cargo-wix"
description = "Build Windows installers using the WiX Toolset"
version = "0.3.9"
authors = ["Christopher Field <cfield2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/volks73/cargo-wix"
documentation = "https://volks73.github.io/cargo-wix"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "installer", "wix-toolset", "wix"]
homepage = "https://github.com/volks73/cargo-wix"
readme = "README.md"
edition = "2021"
exclude = ["/.github"]
rust-version = "1.78.0"

[[bin]]
name = "cargo-wix"

[lib]
name = "wix"

[dependencies]
camino = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
encoding_rs_io = "0.1"
env_logger = "0.11"
itertools = "0.14"
lazy_static = "1"
log = "0.4"
mustache = "0.9"
regex = "1"
rustc-cfg = "0.5"
semver = "1"
sxd-document = "0.3"
sxd-xpath = "0.4"
termcolor = "1"
uuid = { version = "1", features = ["v4"] }
cargo_metadata = "0.23"
serde_json = "1"

[dev-dependencies]
assert_fs = "1"
maplit = "1"
predicates = "3"
serial_test = "3"
toml = "1"

[workspace]
members = [
    "xtask"
]

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/cargo-wix" }
is-it-maintained-open-issues = { repository = "volks73/cargo-wix" }
